# CC_sWM_ROT

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
client/: CMakeLists.txt
client/include/: client.hpp
client/resources/: AO_Sequence_query.txt  AO_Sequence_query_02.txt  AO_Sequence_query_04.txt  AO_Sequence_query_06.txt  AO_Sequence_query_08.txt  AO_Sequence_query_10-1-a.txt  AO_Sequence_query_10-1-b.txt  AO_Sequence_query_10-1-c.txt  AO_Sequence_query_10-2-a.txt  AO_Sequence_query_10-2-b.txt  AO_Sequence_query_10-2-c.txt  AO_Sequence_query_10-3-a.txt  AO_Sequence_query_10-3-b.txt  AO_Sequence_query_10-3-c.txt  AO_Sequence_query_10-4-a.txt  AO_Sequence_query_10-4-b.txt  AO_Sequence_query_10-4-c.txt  AO_Sequence_query_10-5-a.txt  AO_Sequence_query_10-5-b.txt  AO_Sequence_query_10-5-c.txt  AO_Sequence_query_10.txt  AO_Sequence_query_12.txt  AO_Sequence_query_14.txt  AO_Sequence_query_16.txt  G_Sequence_query.txt  G_Sequence_query_06.txt  G_Sequence_query_08.txt  G_Sequence_query_10.txt  query.txt  query_01.txt  sequence_01_query.txt  simple_01_query.txt  simple_01_query_02.txt  simple_01_query_04.txt  simple_01_query_06.txt
client/src/: client.cpp  client_app.cpp  client_main.cpp  client_times_app.cpp  client_times_noise_app.cpp
doc/seq_diag/img/: client_query.puml  server_pre.puml
lib_ngweight/: CMakeLists.txt
lib_ngweight/include/: ngweight_util.hpp  wat_array.hpp
lib_ngweight/src/: ngweight.cpp  ngweight_util.cpp  wat_array.cpp
proto_files/: enc_index.proto
rot_lib/: CMakeLists.txt
rot_lib/include/: El_Gammal_config.hpp  ROT.hpp  WM.hpp
rot_lib/src/: ROT.cpp  WM.cpp
server/: CMakeLists.txt
server/include/: El_Gammal_config.hpp  WM.hpp  config.hpp.in  server.hpp
server/resources/: ejemplo_query_wm.txt  sample.wm
server/src/: WM.cpp  server.cpp  server_app.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/resources/: AO_Runs.txt  AO_Sequence.txt  AO_Sequence_to_ints_bwt.txt  AO_Sequence_to_ints_bwt_wm.txt  G.txt  G_Sequence.txt  G_Sequence_to_ints.txt  G_Sequence_to_ints_bwt.txt  G_Sequence_to_ints_bwt_wm.txt  sequence_01.txt  sequence_01_to_ints.txt  sequence_01_to_ints_bwt.txt  sequence_01_to_ints_bwt_wm.txt  simple_01.txt  simple_01_to_ints.txt  simple_01_to_ints_bwt.txt  simple_01_to_ints_bwt_wm.txt
tools/src/: chtoi.cpp  my_sa_bwt.cpp  wavelet.cpp
